Process all ServletSecurity annotations at web application start rather than at servlet load time to ensure constraints are applied consistently.
git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc8.5.x/trunk@1823314 13f79535-47bb-0310-9956-ffa450edef68